--- a/Version4Nemesys/Views/Report/Create.cshtml
+++ b/Version4Nemesys/Views/Report/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Version4Nemesys.Models.ReportModel
+﻿@model Version4Nemesys.Models.ViewModels.ReportViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -10,26 +10,12 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="AddReport">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="EventDate" class="control-label"></label>
                 <input asp-for="EventDate" class="form-control" />
                 <span asp-validation-for="EventDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ReportDate" class="control-label"></label>
-                <input asp-for="ReportDate" class="form-control" />
-                <span asp-validation-for="ReportDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HazardID" class="control-label"></label>
-                <select asp-for="HazardID" class ="form-control" asp-items="ViewBag.HazardID"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="UserID" class="control-label"></label>
-                <input asp-for="UserID" class="form-control" />
-                <span asp-validation-for="UserID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EventLocation" class="control-label"></label>
@@ -40,20 +26,6 @@
                 <label asp-for="EventDescription" class="control-label"></label>
                 <input asp-for="EventDescription" class="form-control" />
                 <span asp-validation-for="EventDescription" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PhotoID" class="control-label"></label>
-                <select asp-for="PhotoID" class ="form-control" asp-items="ViewBag.PhotoID"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ReportUpvotes" class="control-label"></label>
-                <input asp-for="ReportUpvotes" class="form-control" />
-                <span asp-validation-for="ReportUpvotes" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="States" class="control-label"></label>
-                <select asp-for="States" class="form-control"></select>
-                <span asp-validation-for="States" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
