--- a/Version4Nemesys/Views/Report/Index.cshtml
+++ b/Version4Nemesys/Views/Report/Index.cshtml
@@ -46,7 +46,7 @@
                     </td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.ReportID">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.ReportID">Details</a> |
+                        <a asp-controller="Report" asp-action="Details" asp-route-id="@item.ReportID">Details</a> |
                         <a asp-action="Delete" asp-route-id="@item.ReportID">Delete</a>
                     </td>
                 </tr>
