--- a/Version4Nemesys/Views/Report/Details.cshtml
+++ b/Version4Nemesys/Views/Report/Details.cshtml
@@ -38,4 +38,5 @@
 </div>
 <div>
     <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Create an Investigation for this Report</a>
 </div>
