--- a/Version4Nemesys/Views/Report/Details.cshtml
+++ b/Version4Nemesys/Views/Report/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Details";
+    var imgPath = "~/UploadedImages/" + Model.Report.PhotoPath;
 }
 
 <h1>Details</h1>
@@ -10,29 +11,41 @@
     <h4>ReportModel</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(ReportModel => ReportModel.Report.EventDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(ReportModel => ReportModel.Report.EventDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(ReportModel => ReportModel.Report.ReportDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(ReportModel => ReportModel.Report.ReportDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(ReportModel => ReportModel.Report.EventLocation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(ReportModel => ReportModel.Report.EventLocation)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(ReportModel => ReportModel.Report.EventDescription)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(ReportModel => ReportModel.Report.EventDescription)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(ReportModel => ReportModel.Report.PhotoPath)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(ReportModel => ReportModel.Report.PhotoPath)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(ReportModel => ReportModel.Report.PhotoPath)
+        </dt>
+        <dd class="col-sm-10">
+            <img src="@imgPath" width="450px" height="450px" asp-append-version="true"/>
         </dd>
     </dl>
 </div>
