--- a/Version4Nemesys/Views/Report/Create.cshtml
+++ b/Version4Nemesys/Views/Report/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model Version4Nemesys.Models.ViewModels.ReportViewModel
+﻿@model Version4Nemesys.Models.ReportModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "AddReport";
 }
 
-<h1>Create</h1>
+<h1>AddReport</h1>
 
 <h4>ReportModel</h4>
 <hr />
@@ -13,9 +13,28 @@
         <form asp-action="AddReport">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="UserID" class="control-label"></label>
+                <input asp-for="UserID" class="form-control" />
+                <span asp-validation-for="UserID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ReportName" class="control-label"></label>
+                <input asp-for="ReportName" class="form-control" />
+                <span asp-validation-for="ReportName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="EventDate" class="control-label"></label>
                 <input asp-for="EventDate" class="form-control" />
                 <span asp-validation-for="EventDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ReportDate" class="control-label"></label>
+                <input asp-for="ReportDate" class="form-control" />
+                <span asp-validation-for="ReportDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="HazardID" class="control-label"></label>
+                <select asp-for="HazardID" class ="form-control" asp-items="ViewBag.HazardID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="EventLocation" class="control-label"></label>
@@ -26,6 +45,15 @@
                 <label asp-for="EventDescription" class="control-label"></label>
                 <input asp-for="EventDescription" class="form-control" />
                 <span asp-validation-for="EventDescription" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PhotoID" class="control-label"></label>
+                <select asp-for="PhotoID" class ="form-control" asp-items="ViewBag.PhotoID"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="States" class="control-label"></label>
+                <select asp-for="States" class="form-control"></select>
+                <span asp-validation-for="States" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
