--- a/Version4Nemesys/Views/Report/Details.cshtml
+++ b/Version4Nemesys/Views/Report/Details.cshtml
@@ -39,13 +39,7 @@
             @Html.DisplayNameFor(ReportModel => ReportModel.Report.PhotoPath)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(ReportModel => ReportModel.Report.PhotoPath)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(ReportModel => ReportModel.Report.PhotoPath)
-        </dt>
-        <dd class="col-sm-10">
-            <img src="@imgPath" width="450px" height="450px" asp-append-version="true"/>
+            <img id="DetailsImage" src="@imgPath" height="450px;" width="450px" asp-append-version="true"/>
         </dd>
     </dl>
 </div>
