--- a/Version4Nemesys/Views/Report/Details.cshtml
+++ b/Version4Nemesys/Views/Report/Details.cshtml
@@ -13,6 +13,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(ReportModel => ReportModel.Report.ReportName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(ReportModel => ReportModel.Report.ReportName)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(ReportModel => ReportModel.Report.EventDate)
         </dt>
         <dd class="col-sm-10">
@@ -36,13 +42,13 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(ReportModel => ReportModel.Report.EventDescription)
         </dd>
-        @if (Model.PhotoLocation != null)
+        @if (Model.Report.PhotoPath != null)
         {
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(ReportModel => ReportModel.Report.PhotoPath)
             </dt>
             <dd class="col-sm-10">
-                <img id="DetailsImage" src="@imgPath" height="450px;" width="450px" asp-append-version="true"/>
+                <img id="DetailsImage" src="@imgPath" height="450px;" width="450px" asp-append-version="true" />
             </dd>
         }
     </dl>
