Massive import cleanup after the great migration

--- a/Version4Nemesys/Views/Hazard/Create.cshtml
+++ b/Version4Nemesys/Views/Hazard/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Version4Nemesys.Models.ViewModels.HazardViewModel
+﻿@model Version4Nemesys.ViewModels.HazardViewModel
 
 @{
     ViewData["Title"] = "Create Hazard";
