--- a/Version4Nemesys/Views/Report/Create.cshtml
+++ b/Version4Nemesys/Views/Report/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Version4Nemesys.Models.ViewModels.ReportViewModel
+﻿@model Version4Nemesys.ViewModels.ReportViewModel
 @using Version4Nemesys.Models.Enums
 @{
     ViewData["Title"] = "Create";
