--- a/Version4Nemesys/Views/Report/Details.cshtml
+++ b/Version4Nemesys/Views/Report/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Version4Nemesys.Models.ViewModels.ReportViewModel
+﻿@model Version4Nemesys.ViewModels.ReportViewModel
 @using System.Linq
 
 @{
