Modified voting and checkpoint
Voting now works but has clashes due to two seperate controllers making use of it.

--- a/Version4Nemesys/Views/Vote/Index.cshtml
+++ b/Version4Nemesys/Views/Vote/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.RelatedReport)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Vote)
+                @Html.DisplayNameFor(model => model.Voted)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TotalVotes)
@@ -31,7 +31,7 @@
                 @Html.DisplayFor(modelItem => item.RelatedReport.EventDescription)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Vote)
+                @Html.DisplayFor(modelItem => item.Voted)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TotalVotes)
