--- a/Version4Nemesys/Views/Vote/Create.cshtml
+++ b/Version4Nemesys/Views/Vote/Create.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Vote" /> @Html.DisplayNameFor(model => model.Vote)
+                    <input class="form-check-input" asp-for="Voted" /> @Html.DisplayNameFor(model => model.Voted)
                 </label>
             </div>
             <div class="form-group">
