--- a/Version4Nemesys/Views/Vote/Details.cshtml
+++ b/Version4Nemesys/Views/Vote/Details.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.RelatedReport.EventDescription)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Vote)
+            @Html.DisplayNameFor(model => model.Voted)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Vote)
+            @Html.DisplayFor(model => model.Voted)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TotalVotes)
