--- a/Version4Nemesys/Views/Vote/Edit.cshtml
+++ b/Version4Nemesys/Views/Vote/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="ReportID" />
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Vote" /> @Html.DisplayNameFor(model => model.Vote)
+                    <input class="form-check-input" asp-for="Voted" /> @Html.DisplayNameFor(model => model.Voted)
                 </label>
             </div>
             <div class="form-group">
