--- a/Version4Nemesys/Views/Report/Index.cshtml
+++ b/Version4Nemesys/Views/Report/Index.cshtml
@@ -58,14 +58,10 @@
                         @Html.DisplayFor(modelItem => item.EventDescription)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ReportID)
-                    </td>
-
-                    <td>
-                        <a class="btn btn-primary" asp-controller="VotE" asp-action="MoarVote" asp-route-id="@item.ReportID">updoot</a>
+                        <a class="btn btn-primary" asp-controller="VotE" asp-action="AddVote" asp-route-id="@item.ReportID">updoot</a>
                     </td>
                     <td>
-                        <a asp-controller="Report" asp-action="Details" asp-route-id="@item.ReportID">Details</a>
+                        <a class="btn btn-primary" asp-controller="Report" asp-action="Details" asp-route-id="@item.ReportID">Details</a>
                     </td>
                 </tr>
             }
