--- a/Version4Nemesys/Views/Investigation/Create.cshtml
+++ b/Version4Nemesys/Views/Investigation/Create.cshtml
@@ -1,5 +1,6 @@
-﻿@model Version4Nemesys.Models.InvestigationModel
+﻿@model Version4Nemesys.ViewModels.InvestigationViewModel
 @using Version4Nemesys.Models.Enums
+
 @{
     ViewData["Title"] = "Create";
 }
@@ -16,13 +17,6 @@
                 <label asp-for="InvestigationDescription" class="control-label"></label>
                 <input asp-for="InvestigationDescription" class="form-control" />
                 <span asp-validation-for="InvestigationDescription" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="InvestigationsInTest" class="control-label"></label>
-                <select asp-for="InvestigationsInTest" asp-items="Html.GetEnumSelectList<InvestigationTest>()">
-                    <option selected="selected" value="">Please select</option>
-                </select>
-                <span asp-validation-for="InvestigationsInTest" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
