--- a/Version4Nemesys/Views/Report/Details.cshtml
+++ b/Version4Nemesys/Views/Report/Details.cshtml
@@ -13,6 +13,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(ReportModel => ReportModel.Report.ReportID)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(ReportModel => ReportModel.Report.ReportID)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(ReportModel => ReportModel.Report.ReportName)
         </dt>
         <dd class="col-sm-10">
@@ -55,5 +61,5 @@
 </div>
 <div>
     <a class="btn btn-primary" asp-action="Index">Back to List</a>
-    <a class="btn btn-primary" asp-controller="Investigation" asp-action="AddInvestigation" asp-route-id="@Model.ReportID">Create an Investigation for this Report</a>
+    <a class="btn btn-primary" asp-controller="Investigation" asp-action="RetreiveReport" asp-route-id="@Model.Report.ReportID">Create an Investigation for this Report</a>
 </div>
