--- a/Version4Nemesys/Views/Investigation/Index.cshtml
+++ b/Version4Nemesys/Views/Investigation/Index.cshtml
@@ -1,7 +1,6 @@
-﻿@model IEnumerable<Version4Nemesys.Models.InvestigationModel>
-
-@{
+﻿@{
     ViewData["Title"] = "Index";
+    IEnumerable<InvestigationModel> Reports = ViewBag.Reports;
 }
 
 <h1>Index</h1>
