--- a/Version4Nemesys/Views/Investigation/Details.cshtml
+++ b/Version4Nemesys/Views/Investigation/Details.cshtml
@@ -10,21 +10,27 @@
     <h4>InvestigationModel</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(InvestigationModel => InvestigationModel.Investigation.ActionDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(InvestigationModel => InvestigationModel.Investigation.ActionDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(InvestigationModel => InvestigationModel.Investigation.InvestigationDescription)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(InvestigationModel => InvestigationModel.Investigation.InvestigationDescription)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(InvestigationModel => InvestigationModel.Investigation.InvestigationsInTest)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(InvestigationModel => InvestigationModel.Investigation.InvestigationsInTest)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.InvestigationID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-controller="Investigation" asp-action="Edit" asp-route-id="@Model.Investigation.InvestigationID">Edit</a>
+    <a class="btn btn-primary" asp-action="Index">Back to List</a>
 </div>
