Removed Excess files and did basic role assignment

--- a/Version4Nemesys/Views/Shared/_Layout.cshtml
+++ b/Version4Nemesys/Views/Shared/_Layout.cshtml
@@ -40,9 +40,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Report" asp-action="Index">Index Report</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Investigation" asp-action="Index">Index Investigation</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Account" asp-action="Create">Change Role</a>
                         </li>
                     </ul>
                 </div>
