--- a/Version4Nemesys/Views/Report/Create.cshtml
+++ b/Version4Nemesys/Views/Report/Create.cshtml
@@ -37,7 +37,7 @@
             <div class="form-group">
                 <label asp-for="EventDescription" class="control-label"></label>
                 <input asp-for="EventDescription" class="form-control" />
-                <span asp-validation-for="EventDescription" class="text-danger"></span>
+                <span asp-validation-for="EventDescription" class="text-danger"></span>z
             </div>
             <div class="form-group">
                 <label asp-for="Photo" class="control-label"></label>
