--- a/Version4Nemesys/Views/Report/Index.cshtml
+++ b/Version4Nemesys/Views/Report/Index.cshtml
@@ -29,7 +29,7 @@
                 Description of event
             </th>
             <th>
-                Updoot
+                upvote
             </th>
             <th>
                 Actions
@@ -58,7 +58,7 @@
                         @Html.DisplayFor(modelItem => item.EventDescription)
                     </td>
                     <td>
-                        <a class="btn btn-primary" asp-controller="VotE" asp-action="AddVote" asp-route-id="@item.ReportID">updoot</a>
+                        <a class="btn btn-primary" asp-controller="VotE" asp-action="AddVote" asp-route-id="@item.ReportID">upvote</a>
                     </td>
                     <td>
                         <a class="btn btn-primary" asp-controller="Report" asp-action="Details" asp-route-id="@item.ReportID">Details</a>
