--- a/Version4Nemesys/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Version4Nemesys/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model RegisterModel
+@using Version4Nemesys.Models.Enums
 @{
     ViewData["Title"] = "Register";
 }
@@ -8,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <form asp-controller="Account" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
@@ -26,6 +27,13 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.JobsList" class="control-label">Which role:</label>
+                <select asp-for="Input.JobsList" asp-items="Html.GetEnumSelectList<Jobs>()">
+                    <option selected="selected" value="">Please select</option>
+                </select>
+                <span asp-validation-for="Input.JobsList" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
