--- a/Version4Nemesys/Views/Home/Leaderboard.cshtml
+++ b/Version4Nemesys/Views/Home/Leaderboard.cshtml
@@ -1,7 +1,20 @@
-﻿
+﻿@model Version4Nemesys.Models.VoteModel
 @{
     ViewData["Title"] = "Leaderboard";
 }
-
 <h1>Leaderboard</h1>
-
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                Reporter
+            </th>
+            <th>
+                Count of Upvotes
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        
+    </tbody>
+</table>
