--- a/Version4Nemesys/Views/Shared/_Layout.cshtml
+++ b/Version4Nemesys/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Investigation" asp-action="Index">Index Investigation</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Leaderboard">Hall Of Fame</a>
+                        </li>
                     </ul>
                 </div>
             </div>
