--- a/Version4Nemesys/Views/Report/Details.cshtml
+++ b/Version4Nemesys/Views/Report/Details.cshtml
@@ -42,6 +42,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(ReportModel => ReportModel.EventDescription)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(ReportModel => ReportModel.User.Email)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(ReportModel => ReportModel.User.Email)
+        </dd>
         @if (Model.PhotoPath != null)
         {
             <dt class="col-sm-2">
