Hall of fame works, removed useless migrations, added migration due to amendment of Home
Should be the last of any functionality. Only front-end is left which I have no time to do.

--- a/Version4Nemesys/Views/Home/Leaderboard.cshtml
+++ b/Version4Nemesys/Views/Home/Leaderboard.cshtml
@@ -11,7 +11,7 @@
                 Reporter
             </th>
             <th>
-                Count of Upvotes
+                Count of Reports
             </th>
         </tr>
     </thead>
@@ -22,7 +22,7 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.UserId)
+                        @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Counter)
